@startuml Class Diagram - Sales, Returns & Observability

!theme plain
skinparam classAttributeIconSize 0
skinparam dpi 120
skinparam classFontSize 10
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #1F2933
skinparam packageBackgroundColor #F5F7FA
skinparam packageBorderColor #9AA5B1
skinparam arrowColor #1F2933
skinparam noteBackgroundColor #FFF3CD
skinparam noteBorderColor #856404

package "Sales & Payments" {
    class User {
        + userID: int
        + username: str
        + email: str
    }

    class Product {
        + productID: int
        + name: str
        + price: decimal
        + stock: int
        + get_discounted_unit_price(): decimal
    }

    class Sale {
        + saleID: int
        + totalAmount: decimal
        + status: str
        + sale_date: datetime
    }

    class SaleItem {
        + saleItemID: int
        + quantity: int
        + subtotal: decimal
    }

    abstract class Payment {
        + paymentID: int
        + amount: decimal
        + status: str
        + authorized(): bool
    }

    class Cash {
        + cash_tendered: decimal
    }

    class Card {
        + card_number: str
        + card_type: str
    }
}

package "Returns & Refunds" {
    class ReturnRequest {
        + returnRequestID: int
        + status: ReturnRequestStatus
        + reason: ReturnReason
        + details: str
        + rma_number: str
        + created_at: datetime
        + updated_at: datetime
    }

    class ReturnItem {
        + returnItemID: int
        + quantity: int
        + condition_report: str
        + requested_refund_amount: decimal
    }

    class ReturnShipment {
        + shipmentID: int
        + carrier: str
        + tracking_number: str
        + shipped_at: datetime
        + received_at: datetime
    }

    class Inspection {
        + inspectionID: int
        + inspected_by: str
        + result: InspectionResult
        + notes: str
        + inspected_at: datetime
    }

    class Refund {
        + refundID: int
        + amount: decimal
        + method: RefundMethod
        + status: RefundStatus
        + processed_at: datetime
    }

    class ReturnPhoto {
        + photoID: int
        + file_path: str
        + uploaded_at: datetime
    }

    class ReturnsService {
        + create_return_request()
        + authorize_return()
        + record_shipment()
        + mark_received()
        + record_inspection()
    }

    class RefundService {
        + initiate_refund()
        + handle_failure()
    }
}

package "Reliability & Observability" {
    class QualityTacticsManager {
        + check_throttling()
        + execute_with_circuit_breaker()
        + queue_order_for_retry()
    	+ get_system_health()
    }

    class CircuitBreakerState {
        + service_name: str
        + state: str
        + failure_count: int
        + next_attempt_time: datetime
    }

    class OrderQueue {
        + queueID: int
        + saleID: int
        + queue_type: str
        + priority: int
        + status: str
    }

    class SystemMetrics {
        + metricID: int
        + metric_name: str
        + metric_value: float
    	+ metric_unit: str
    	+ tags: json
        + timestamp: datetime
    }

    class ObservabilityDashboard {
        + render_admin_dashboard()
        + show_quality_scenarios()
        + show_rma_kpis()
    }
}

User ||--o{ Sale : places
Sale ||--o{ SaleItem : contains
Sale ||--o{ Payment : "0..* payments"
Payment <|-- Cash
Payment <|-- Card
Product ||--o{ SaleItem : is_sold_in

Sale ||--o{ ReturnRequest : may_spawn
ReturnRequest ||--o{ ReturnItem : line_items
ReturnRequest ||-- ReturnShipment : logistics
ReturnRequest ||-- Inspection : QA
ReturnRequest ||-- Refund : disposition
ReturnRequest ||--o{ ReturnPhoto : evidence
Refund --> Payment : references_original
ReturnsService ..> ReturnRequest : manages
ReturnsService ..> ReturnItem
ReturnsService ..> ReturnShipment
ReturnsService ..> Inspection
ReturnsService ..> ReturnPhoto
RefundService ..> Refund
RefundService ..> Payment
RefundService ..> ReturnsService : notifies

QualityTacticsManager --> CircuitBreakerState : persists_state
QualityTacticsManager --> OrderQueue : enqueues
QualityTacticsManager --> SystemMetrics : emits_metrics
ObservabilityDashboard --> SystemMetrics : queries
ObservabilityDashboard --> QualityTacticsManager : surfaces_status
ReturnsService --> QualityTacticsManager : uses_metrics
RefundService --> QualityTacticsManager : uses_circuit_breaker

note right of ReturnRequest
  RMA lifecycle:
  PENDING_AUTHORIZATION →
  AUTHORIZED → IN_TRANSIT →
  RECEIVED → UNDER_INSPECTION →
  APPROVED/REJECTED → REFUNDED
end note

note right of ObservabilityDashboard
  Admin dashboard highlights:
  - RMA rate & cycle time
  - A.1 success rate & MTTR
  - P.1 latency (p95)
  - Buckets align with Config.DEFAULT_TIMEZONE
end note

note right of RefundService
  Refund routing
  - Manual methods (cash / store credit) stay in-app
  - Card/original methods go through PaymentService
  - Reference stored for both paths
end note

@enduml
